--- a/project2/static/channel_stl.css
+++ b/project2/static/channel_stl.css
@@ -13,4 +13,7 @@ body {
   border-color: #abee77;
   border-radius: 30px; }
 
+tr {
+  background-color: #dfe3ee; }
+
 /*# sourceMappingURL=channel_stl.css.map */
