--- a/project2/templates/channel.html
+++ b/project2/templates/channel.html
@@ -57,7 +57,7 @@
                     <!--for file upload-->
                     <form id="fileform" class="form-inline" enctype=multipart/form-data action="{{ url_for('upload_file') }}" method="POST"><!--  -->
                         <fieldset>
-                            <label for="file">Select a file:</label>
+                            <h5>Select a file:</h5>
                             <input name="file" type="file">
                         </fieldset>
                         <fieldset>
@@ -71,20 +71,12 @@
                 <h2> Channel Media </h2>
                 <!-- for response after file upload -->
                 {% if response is none %}
-
+                    <br>
                 {% else %}
                     <div class="alert alert-primary" role="alert">
                         {{ response }}
                     </div>
                 {% endif %}
-
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            {{ message }}
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
 
                 <table class="table table-bordered table-hover">
                     <thead class="thead-dark">
